
<resources>
    <string name="app_name">eCleaner</string>
    <string name="app_nametitle">android</string>
    <string name="action_settings">Settings</string>
    <string name="memory">STORAGE</string>
    <string name="ram">RAM</string>
    <string name="index_storage" formatted="false">%s / %s</string>
    <string name="total_found">Total found: %s</string>
    <string name="clean_up">Clean Up</string>
    <string name="system_cache">System Cache</string>
    <string name="downloader_files">Downloaded Files</string>
    <string name="obsolete_apk">Obsolete APKs</string>
    <string name="junk_clean">Clean Cache</string>
    <string name="phone_boots">Boost Phone</string>
    <string name="app_manager">App Manager</string>
    <string name="battery_saver">Battery Saver</string>
    <string name="done">Done</string>
    <string name="no_junk">No junk file found</string>
    <string name="uninstall">Uninstall</string>
    <string name="third_party_apps">Third party apps</string>
    <string name="system_apps">System apps</string>
    <string name="lenght_time_off_screen">s</string>
    <string name="super_saving">Super Saving</string>
    <string name="normal">Normal</string>
    <string name="custom">Custom</string>
    <string name="add_mode">Add Mode</string>
    <string name="screen_brightness">Screen Brightness</string>
    <string name="auto">Auto</string>
    <string name="screen_timeout">Screen Timeout</string>
    <string name="lenght_screen_timout_s">%ds</string>
    <string name="lenght_screen_timout_m">%dm</string>
    <string name="minutes">%d minute(s)</string>
    <string name="seconds">%d seconds</string>
    <string name="wifi">Wifi</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="data">Data</string>
    <string name="vibrate">Vibrate</string>
    <string name="auto_sync">Auto Sync</string>
    <string name="name">Name</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="seconds_15">15 seconds</string>
    <string name="seconds_30">30 seconds</string>
    <string name="minute_1">1 minute</string>
    <string name="minute_2">2 minutes</string>
    <string name="minute_5">5 minutes</string>
    <string name="minute_10">10 minutes</string>
    <string name="percent">%d %%</string>
    <string name="enter_name">Enter Mode Name</string>
    <string name="please_input_name">Please input name</string>
    <string name="used_mem">Used: %s</string>
    <string name="free_mem">Free: %s</string>
    <string name="total_mem">Total: %s</string>
    <string name="boost_done">Some apps may reopen automatically after they have been forced to stop running.</string>
    <string name="has_been_boosted">You device has been boosted</string>
    <string name="calculating">Calculating...</string>
    <string name="suggested">Suggested</string>
    <string name="percent_none">%</string>
    <string name="auto_boost">Auto Boost</string>
    <string name="every_10_mins">Every 10 mins</string>
    <string name="white_list">Whitelist</string>
    <string name="white_list_description">Keep whitelisted apps running when boosting</string>
    <string name="advance">Advance</string>
    <string name="boost_widget">Boost Widget</string>
    <string name="boost_widget_description">Home screen widget to boost phone</string>
    <string name="floating_booster">Floating Booster</string>
    <string name="floating_booster_description">Show floating boost button on screen</string>
    <string name="battery_percent">Battery Percent</string>
    <string name="battery_percent_description">Show battery percent in notification bar</string>
    <string name="full_battery_percent">Fully charging reminder</string>
    <string name="full_battery_percent_description">Protect your battery from overcharging</string>
    <string name="others">Others</string>
    <string name="rate">Rate 5 stars</string>
    <string name="rate_description">Give us 5 stars and comment</string>
    <string name="share">Share to friend</string>
    <string name="share_description">Share this app to your friend</string>
    <string name="boost">Boost</string>
    <string name="free_ram">Free RAM: %s</string>
    <string name="device_has_been_boosted">You device has been boosted</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="no_item">No item</string>
    <string name="add_to_whitelist">Add to whitelist</string>
    <string name="add_to_white_list">Add to whitelist</string>
    <string name="title_home_wiget">Create boost widget</string>
    <string name="got_it">GOT IT</string>
    <string name="description_home_wiget">1. Long press home screen or menu to add widget. \n 2. Choose "Speed Booster" widget to add to home screen. \n 3. Then tap Speed Booster to speed up yout phone easily</string>
    <string name="mode_to_use">Mode to use in this period</string>
    <string name="mode_to_use_outside">Mode to use outside of this period</string>
    <string name="start_at">Start at</string>
    <string name="stop_at">Stop at</string>
    <string name="enabled">Enabled</string>
    <string name="battery_plan">Battery Saving Plan</string>
    <string name="ok">OK</string>
    <string name="time" formatted="false">%d:%d</string>
    <string name="select_mode">Select Mode</string>
    <string name="str_battery_about_full">Battery about to be fully charged</string>
    <string name="large_files">Large Files</string>
    <string name="setting_permission_request_title">Allow write system settings</string>
    <string name="setting_permission_request_summary">You need turn on permission to use this function</string>
    <string name="guide_reminder">You need to grant Usage Access permission to enable this feature</string>
    <string name="guide_activity_usage">Please permit usage access</string>
    <string name="application_data">Данные Приложений</string>
    <string name="residual_files">Остаточные Файлы</string>
    <string name="application_cache">Кэш Приложений</string>
</resources>