<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_list"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_text_boost_header"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvTotalBoost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/textview_header_clean"
                tools:text="75" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginStart="3dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textview_small_header_clean"
                    tools:text="@string/percent_none" />

                <TextView
                    android:id="@+id/tvSuggesterBoost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/suggested"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textview_small_header_clean" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/tvBoosterPercent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textSize="@dimen/textview_small_header_clean"
            tools:text="@string/total_found" />

        <com.kikimore.ecleaner.view.WaveLoadingView
            android:id="@+id/waveLoadingView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_text_boost_header_wave"
            app:mlv_borderWidth="0dp"
            app:mlv_shapeType="square"
            app:mlv_titleCenterColor="@android:color/transparent"
            app:mlv_titleTopColor="@android:color/transparent"
            app:mlv_waveAmplitude="20"
            app:mlv_waveColor="@color/opacity_button" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/viewEmpty"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/selector_row"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="@dimen/padding_item_menu"
            android:paddingTop="@dimen/padding_item_menu"
            android:visibility="gone">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_circle"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/padding_item_small_home"
                android:src="@drawable/ic_check_teal_500_24dp" />

            <TextView
                style="@style/text_menu_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/has_been_boosted" />
        </LinearLayout>

        <FrameLayout
            android:id="@+id/recyclerViewBoost"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:background="@color/background_list"
            android:padding="3dp"
            android:visibility="gone" />

        <include layout="@layout/loading" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/grey_500" />

    <Button
        android:layout_marginStart="20dip"
        android:layout_marginEnd="20dip"
        android:id="@+id/btnBoost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_btn"
        android:text="@string/clean_up"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btnDone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_btn"
        android:text="@string/done"
        android:layout_marginStart="20dip"
        android:layout_marginEnd="20dip"
        android:textColor="@color/white"
        android:visibility="gone" />


</LinearLayout>